# Change log


## [Unreleased] - Minor version 1.3.1

### Added
- New checkout page with simplified design.
- Adding new `lsx-hp-simple-checkout` body class if its the checkout page.

### Fixed
- Adding in Fix to translate breadcrumbs if endpoints where translated.
- Fixed issue `Undefined variable: intro_text`.
- Fixed issue `Undefined variable: post_id`.

### Security
- Updating dependencies to prevent vulnerabilities.
- General testing to ensure compatibility with latest WordPress version (5.4).
- General testing to ensure compatibility with latest LSX Theme version (2.7).


## [[1.3.0]](https://github.com/lightspeeddevelopment/lsx-health-plan/releases/tag/untagged-5ce7408d3f5c6aaeda32) - 2020-02-20

### Added
- Separated the "Snack" boxes from the Meal Plan columns.
- Added in an archive description field for the recipes post type archive.
- Integrated the recipes archive with the LSX Search plugin.
- Added in the structure and styling for the Recipes Type taxonomy to match the post type archive.
- Added a `show_downloads` parameter to the weekly plan shortcode, which displays a list of the downloads added to the downloads category.
- Refactored single plan tabs and the tab output, so they are passed through filters to allow 3rd Party changes.
- Design Updates to Recipes Cards.
- Download button on the workout tab will only appear if there is a pdf attached.
- Adding Pre Workout Snack and the Recovery Snack to Workout.

### Fixed
- Fixed the un-prefixed functions
- Refactored the recipes functions
- Changing all the kg's and cm's in the detail boxes to just kg and cm (no plural).
- Making sure the wrapper for the tip carousel doesn't output if there are not tips assigned.
- Fixed the integration with CMB2, and detecting when it is active.
- Pre and Post workout snack titles can be translated individually.


## [[1.2.0]](https://github.com/lightspeeddevelopment/lsx-health-plan/releases/tag/1.2) - 2019-12-19

### Added
- Added in translatable endpoint settings.